# digital_game_development_UFMG

./: README.md
star-fox/: CMakeLists.txt  README.md
star-fox/Assets/: Arwing.gpmesh  Cube.gpmesh  Laser.gpmesh
star-fox/Source/: Camera.cpp  Game.cpp  Game.h  Makefile
star-fox/Source/Actors/: Block.cpp  Block.h  Ship.cpp  Ship.h
star-fox/Source/Components/Drawing/: MeshComponent.cpp  MeshComponent.h
star-fox/Source/Components/Particles/: Bullet.cpp  ParticleSystemComponent.h
star-fox/Source/Components/Physics/: AABBColliderComponent.h  RigidBodyComponent.cpp
star-fox/Source/Renderer/: Renderer.cpp  Renderer.h  Texture.cpp
star-fox/Source/UI/Screens/: GameOver.cpp  HUD.cpp  MainMenu.cpp  PauseMenu.cpp  PauseMenu.h  UIScreen.cpp  UIScreen.h
